--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,11 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="light_gray">#F5F5F5</color>
+    <color name="dark_purple">#301934</color>
+    <color name="teal_700">#008080</color>
+    <color name="red">#E53935</color>
+    <color name="orange">#FFA500</color>
+    <color name="purple_700">#a881af</color>
+
 </resources>
